set limit for ViewPager

--- a/mobile/src/main/res/layout/activity_windscribe.xml
+++ b/mobile/src/main/res/layout/activity_windscribe.xml
@@ -316,6 +316,7 @@
                 android:layout_marginStart="@dimen/margin_24"
                 android:contentDescription="@null"
                 android:scaleType="center"
+                android:visibility="gone"
                 app:layout_constraintBottom_toTopOf="@id/img_server_list_header_divider"
                 app:layout_constraintStart_toEndOf="@id/img_server_list_favorites"
                 app:layout_constraintTop_toTopOf="parent"
@@ -330,6 +331,7 @@
                 android:layout_marginStart="@dimen/margin_24"
                 android:contentDescription="@null"
                 android:scaleType="center"
+                android:visibility="gone"
                 app:layout_constraintBottom_toTopOf="@id/img_server_list_header_divider"
                 app:layout_constraintStart_toEndOf="@id/img_server_list_flix"
                 app:layout_constraintTop_toTopOf="parent"
@@ -344,7 +346,7 @@
                 android:layout_marginStart="@dimen/margin_24"
                 android:contentDescription="@null"
                 android:scaleType="center"
-                android:visibility="visible"
+                android:visibility="gone"
                 app:layout_constraintBottom_toTopOf="@id/img_server_list_header_divider"
                 app:layout_constraintStart_toEndOf="@id/img_static_ip_list"
                 app:layout_constraintTop_toTopOf="parent"
